snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
1e84b512f09815bdd563ea1a92d57500d316acf3725d59b46439eafd131c8cfcf4c1e3cd3d8ad7c3c1cdd037e20801497623a4851c9a435d972c1ea92efa33b0